[package]
name = "hyperstate-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.31.0", features = ["serde"] }
bitcoincore-rpc = "0.17.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"